# src/dtos/parkingSession.dto.ts
@@ -1,0 +1,12 @@
+import { IsNotEmpty, IsString } from "class-validator";
+
+export class CreateParkingSession {
+
+    @IsNotEmpty()
+    @IsString()
+    readonly vehiclePlateNumber: string;
+
+    @IsNotEmpty()
+    @IsString()
+    readonly slotNumber: string;
+}
